# hashes

./: Cargo.toml
blake/: Cargo.toml
blake/benches/: blake256.rs  blake512.rs  machine.rs
blake/src/: consts.rs  lib.rs
blake/tests/: lib.rs
blake/tests/data/: blake224.blb  blake256.blb  blake384.blb  blake512.blb
