[package]
name = "blake"
version = "0.1.0"
description = "BLAKE hash function"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"
documentation = "https://docs.rs/blake"
repository = "https://github.com/RustCrypto/hashes"
keywords = ["crypto", "blake2", "hash", "digest"]
categories = ["cryptography", "no-std"]

[dependencies]
digest = "0.10"
simd = { package = "ppv-lite86", version = "0.2.16", optional = true }

[features]
default = ["simd"]

[dev-dependencies]
digest = { version = "0.10", features = ["dev"] }
